--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "langchain-openai>=0.2.0",
     "langchain-core>=0.3.0",
     "langchain-community>=0.3.0",
-    "langchain-text-splitters>=0.3.0",    "chromadb>=0.4.0",
+    "langchain-text-splitters>=0.3.0",
+    "langchain-ollama>=1.0.0",
+    "chromadb>=0.4.0",
     "langchain-chroma>=0.1.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
@@ -21,11 +23,13 @@ dependencies = [
     "structlog>=24.0.0",
     "tenacity>=8.0.0",
     "pandas>=2.0.0",
-    "numpy>=1.24.0",    # RAG Ingestion dependencies
+    "numpy>=1.24.0",
+    # RAG Ingestion dependencies
     "sentence-transformers>=2.2.0",
     "rank-bm25>=0.2.2",
     "datasketch>=1.6.0",
     "pypdf>=4.0.0",
+    "PyMuPDF>=1.24.0",
     "pdf2image>=1.16.0",
     "pytesseract>=0.3.10",
     "Pillow>=10.0.0",
